--- a/src/css/SceneControls.css
+++ b/src/css/SceneControls.css
@@ -1,7 +1,7 @@
 .soundControls {
   display: flex;
   font-family: var(--font-primary);
-  flex-direction: row;
+  flex-direction: column;
   color: white;
   justify-content: center;
   background-color: var(--callout-bg-color);
