--- a/src/css/ViewScreen.css
+++ b/src/css/ViewScreen.css
@@ -26,7 +26,7 @@
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.2rem;
-  font-weight: var(--font-weight);
+  font-weight: var(--fw-medium);
   transition: all 0.3s ease-in-out;
 }
 
