--- a/src/css/GameInstructions.css
+++ b/src/css/GameInstructions.css
@@ -2,9 +2,8 @@
   position: fixed;
   justify-content: space-between;
   background: white;
-  color: white;
   font-family: var(--font-primary);
-  font-weight: var(--font-weight);
+  font-weight: var(--fw-medium);
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -12,25 +11,68 @@
   z-index: 4;
 }
 
-.consent-button {
+.back-dashboard-link {
+  color: var(--uvx-primary);
+  margin: 2% 3%;
+}
+
+.how-to-play-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+  height: 100%;
+  /* padding: 0 3%; */
+  border: 2px solid red;
+}
+
+.h2play-title {
+  padding: 2%;
+  margin-bottom: 2rem;
+}
+
+.h2play-title h2 {
+  font-size: var(--font-medium);
+}
+
+.h2play-title h3 {
+  font-size: var(--font-small);
+}
+
+.card-carousel {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  width: 40%;
+  height: calc(35% + 22%);
+  border: 2px solid blue;
 }
 
 .instruction-footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  padding: 2%;
+  height: 22%;
+  padding: 1% 5%;
   background: var(--uvx-secondary);
+  color: white;
+  z-index: 1;
 }
 
 .instruction-list:before {
   content: "This game requires a web camera:";
   font-size: var(--font-small);
-  margin-left: -50px;
+  margin-left: -3rem;
 }
 
-.instruction-list {
-
+.instruction-list li {
+  margin-top: 1rem;
+  font-size: var(--font-xsmall);
 }
 
 .footer-title {
