--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -20,14 +20,6 @@
   z-index: -1;
 }
 
-.select-environment-title {
-  justify-content: center;
-  align-items: center;
-  border-radius: var(--border-radius);
-  background: var(--callout-bg-color);
-  padding: 1% 2%;
-}
-
 #environment-cards-container {
   display: flex;
   gap: 2rem;
@@ -65,8 +57,8 @@
   font-size: var(--font-medium);
   width: 100%;
   text-align: center;
-  font-style: var(--font-style);
-  font-weight: var(--font-weight);
+  font-style: italic;
+  font-weight: var(--fw-medium);
   pointer-events: none;
   opacity: 0; /* Start hidden */
 }
