--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,12 +11,14 @@
   --fw-medium: 600;
   --fw-bold: 700;
   --callout-bg-color: #272727;
-  --uvx-primary: #7085FF;
-  --uvx-secondary: #3C5199;
-  --uvx-accent-color: #F984FF;
+  --uvx-primary: #7085ff;
+  --uvx-secondary: #3c5199;
+  --uvx-accent-color: #f984ff;
   --uvx-r-gradient: linear-gradient(to right, var(--uvx-primary), transparent);
   --uvx-l-gradient: linear-gradient(var(--uvx-primary), var(--uvx-secondary));
   --mask-r-gradient: linear-gradient(to right, rgba(0, 0, 0, 1.0) 30%, transparent 100%);
+  --uvx-t-gradient: linear-gradient(to top, var(--uvx-primary), transparent);
+  --uvx-b-gradient: linear-gradient(to bottom, var(--uvx-primary), transparent);
   --mask-l-gradient: linear-gradient(to left, rgba(0, 0, 0, 1) 10%, transparent 100%);
   --border-radius: 1.5rem;
   --font-large: 4rem;
