--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -11,6 +11,17 @@
   z-index: 3;
 }
 
+.startButton {
+  background-image: var(--uvx-l-gradient);
+  border-radius: 5px;
+  padding: 20px 60px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: white;
+  border: var(--uvx-accent-color) 2px solid;
+  cursor: pointer;
+}
+
 .setup-screen-bg-video {
   position: absolute;
   width: 100%;
@@ -23,8 +34,8 @@
 .select-environment-title {
   justify-content: center;
   align-items: center;
-  height: 25%;
-  width: 75%;
+  height: 30%;
+  width: 100%;
   border-radius: var(--border-radius);
   background: var(--callout-bg-color);
   text-align: center;
@@ -91,7 +102,9 @@
 }
 
 .box {
-  border: 2px solid red;
+  background-image: var(--uvx-b-gradient);
+  padding: 1rem;
+  border-radius: 15px;
   flex: 1 1 30%;
   margin: 2% 2%;
   min-width: 25%;
@@ -131,11 +144,11 @@
   justify-content: space-around;
   height: 100%;
   width: 100%;
-  padding: 1rem;
+  color: white;
 }
 
 .box3-section {
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: var(--border-radius);
   padding: 1rem;
   text-align: center;
@@ -151,15 +164,11 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  border: 1px solid #ccc;
+  background-color: var(--callout-bg-color);
+  border: 2px solid #ccc;
   border-radius: var(--border-radius);
   padding: 1rem;
   text-align: center;
-  color: rgb(
-    0,
-    0,
-    0
-  ); /* Ensures text is visible against the image background */
 }
 
 .box3-section h3 {
@@ -168,11 +177,11 @@
 
 .box3-section p {
   font-size: 1.2rem;
-  color: rgb(0, 0, 0);
 }
 
 .box3-section.avatar {
   display: flex;
+  background-color: var(--callout-bg-color);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -180,15 +189,15 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: var(--border-radius);
   padding: 1rem;
   text-align: center;
-  color: rgb(0, 0, 0);
 }
 
 .box3-section.options {
   display: flex;
+  background-color: var(--callout-bg-color);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -196,27 +205,26 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: var(--border-radius);
   padding: 1rem;
   text-align: center;
-  color: rgb(0, 0, 0);
 }
 
 .back-button {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #f9cc35;
-  color: #000;
-  border: none;
+  background-color: var(--uvx-primary);
+  color: white;
+  border: 2px solid var(--uvx-secondary);
   border-radius: var(--border-radius);
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .back-button:hover {
-  background-color: #e5b82d;
+  background-color: var(--uvx-secondary);
 }
 
 .new-content {
