--- a/src/css/GameInstructions.css
+++ b/src/css/GameInstructions.css
@@ -23,8 +23,6 @@
   align-self: center;
   width: 100%;
   height: 100%;
-  /* padding: 0 3%; */
-  border: 2px solid red;
 }
 
 .h2play-title {
@@ -46,7 +44,7 @@
   height: 100%;
 }
 
-.card {
+.h2play-card {
   width: 40%;
   height: calc(35% + 22%);
   border: 2px solid blue;
@@ -65,7 +63,7 @@
 }
 
 .instruction-list:before {
-  content: "This game requires a web camera:";
+  content: 'This game requires a web camera:';
   font-size: var(--font-small);
   margin-left: -3rem;
 }
