--- a/src/css/GameInstructions.css
+++ b/src/css/GameInstructions.css
@@ -12,6 +12,7 @@
 }
 
 .back-dashboard-link {
+  position: absolute;
   color: var(--uvx-primary);
   margin: 2% 3%;
 }
@@ -20,14 +21,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-self: center;
+  justify-content: space-around;
   width: 100%;
   height: 100%;
 }
 
 .h2play-title {
   padding: 2%;
-  margin-bottom: 2rem;
 }
 
 .h2play-title h2 {
@@ -41,7 +41,7 @@
 .card-carousel {
   display: flex;
   width: 100%;
-  height: 100%;
+  margin-bottom: 5%;
 }
 
 .h2play-card {
@@ -49,9 +49,15 @@
   align-items: center;
   justify-content: center;
   width: 40%;
-  height: calc(35% + 22%);
-  border: 2px solid blue;
-  /* transition: all 1s linear; */
+  /* height: calc(35% + 22%); */
+  /* height: 350px; set a max height for video, make responsive later */
+  /* background: blue; */
+  transition: opacity 1s linear;
+}
+
+.instructional-video {
+  /* width: 40%; */
+  max-height: 350px;
 }
 
 .instruction-footer {
@@ -79,4 +85,13 @@
 
 .footer-title {
   font-size: var(--font-small);
+}
+
+@media screen and (max-width: 1000px) {
+  .instruction-list:before {
+    font-size: var(--font-xsmall);
+  }
+  .instruction-list li {
+    font-size: 0.75rem;
+  }
 }
