--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -2,7 +2,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background: rgba(255, 255, 255, 1);
+  background: #c6cdff;
   color: black;
   display: flex;
   flex-direction: column;
@@ -14,8 +14,8 @@
 .startButton {
   background-image: var(--uvx-l-gradient);
   border-radius: 5px;
-  padding: 20px 60px;
-  font-size: 1.25rem;
+  padding: 10px 20px;
+  font-size: 1rem;
   font-weight: 600;
   color: white;
   border: var(--uvx-accent-color) 2px solid;
@@ -25,10 +25,21 @@
 .setup-screen-bg-video {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: auto;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: -3;
+}
+
+.uvx-logo {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  top: 2%;
+  /* left: 43%; */
+  z-index: -3;
 }
 
 .select-environment-title {
@@ -43,7 +54,7 @@
 
 #environment-cards-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -98,52 +109,25 @@
   height: 95vh;
   width: 100%;
   padding: 2%;
-  perspective: 1000px;
 }
 
 .box {
-  background-image: var(--uvx-b-gradient);
-  padding: 1rem;
-  border-radius: 15px;
-  flex: 1 1 30%;
-  margin: 2% 2%;
-  min-width: 25%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 1rem;
+  border-radius: 15px;
   align-items: center;
   transition: transform 0.5s;
 }
 
-.box:nth-child(1) {
-  transform: rotateY(15deg) skewY(2deg);
-}
-
-.box:nth-child(2) {
-  height: 80%;
-  transform: translateZ(50px);
-}
-
-.box:nth-child(3) {
-  transform: rotateY(-15deg) skewY(-2deg);
-}
-
-.box2-content {
-  height: 75vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .box3-content {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
+  flex-direction: row;
   width: 100%;
+  height: auto;
+  width: auto;
   color: white;
 }
 
@@ -155,16 +139,16 @@
   margin-bottom: 1rem;
 }
 
-.box3-section.environment {
+.box3-section.cards {
   display: flex;
+  background-color: var(--callout-bg-color);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 30%;
+  height: auto;
   width: 100%;
   background-size: cover;
   background-position: center;
-  background-color: var(--callout-bg-color);
   border: 2px solid #ccc;
   border-radius: var(--border-radius);
   padding: 1rem;
@@ -177,38 +161,6 @@
 
 .box3-section p {
   font-size: 1.2rem;
-}
-
-.box3-section.avatar {
-  display: flex;
-  background-color: var(--callout-bg-color);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
-}
-
-.box3-section.options {
-  display: flex;
-  background-color: var(--callout-bg-color);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
 }
 
 .back-button {
@@ -233,9 +185,7 @@
 }
 
 .hovered-image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  max-height: 10rem;
   transition: opacity 0.3s ease;
 }
 
@@ -282,35 +232,6 @@
   height: 95vh;
   width: 100%;
   padding: 2%;
-  perspective: 1000px;
-}
-
-.box {
-  background-image: var(--uvx-b-gradient);
-  padding: 1rem;
-  border-radius: 15px;
-  flex: 1 1 30%;
-  margin: 2% 2%;
-  min-width: 25%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: transform 0.5s;
-}
-
-.box:nth-child(1) {
-  transform: rotateY(15deg) skewY(2deg);
-}
-
-.box:nth-child(2) {
-  height: 80%;
-  transform: translateZ(50px);
-}
-
-.box:nth-child(3) {
-  transform: rotateY(-15deg) skewY(-2deg);
 }
 
 .box2-content {
@@ -320,143 +241,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.box3-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-  width: 100%;
-  color: white;
-}
-
-.box3-section {
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.box3-section.environment {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  background-color: var(--callout-bg-color);
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
-}
-
-.box3-section h3 {
-  margin-bottom: 0.5rem;
-}
-
-.box3-section p {
-  font-size: 1.2rem;
-}
-
-.box3-section.avatar {
-  display: flex;
-  background-color: var(--callout-bg-color);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
-}
-
-.box3-section.options {
-  display: flex;
-  background-color: var(--callout-bg-color);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  border: 2px solid #ccc;
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  text-align: center;
-}
-
-.back-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: var(--uvx-primary);
-  color: white;
-  border: 2px solid var(--uvx-secondary);
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.back-button:hover {
-  background-color: var(--uvx-secondary);
-}
-
-.new-content {
-  text-align: center;
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.hovered-image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  transition: opacity 0.3s ease;
-}
-
-#avatar-cards-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  width: 95%;
-  gap: 1rem;
-  margin-top: 5%;
-}
-
-.avatar-card {
-  position: relative;
-  width: 75%;
-  aspect-ratio: 0.5 / 1;
-  background-size: cover;
-  background-position: center;
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  overflow: hidden;
-}
-
-.avatar-card .hover-text {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  color: white;
-  font-family: var(--font-primary);
-  font-size: var(--font-medium);
-  width: 100%;
-  text-align: center;
-  font-style: var(--font-style);
-  font-weight: var(--font-weight);
-  pointer-events: none;
-  opacity: 0;
 }
 
 .hovered-avatar-container {
