--- a/src/css/UVXBrandWatermark.css
+++ b/src/css/UVXBrandWatermark.css
@@ -1,24 +1,51 @@
 #uvx-watermark-container {
-  position: absolute;
-  right: 0;
-  bottom: 20%;
-  width: 18%;
-  height: 10%;
-  max-height: 10%;
-  z-index: 1;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  height: max-content;
+  padding: 1rem;
 }
 
 #uvx-watermark-container::before {
   content: '';
   position: absolute;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0;
-  background: var(--uvx-l-gradient);
+  width: 18%;
+  height: 8%;
+  max-height: 8%;
+  /* background: var(--uvx-l-gradient); */
+  background-color: var(--uvx-primary);
   mask-image: var(--mask-l-gradient);
   z-index: 0;
+}
+
+/* ------ Responsiveness ------ */
+@media screen and (max-width: 1440px) {
+  #uvx-watermark-container img {
+    height: 2rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #uvx-watermark-container img {
+    height: 1rem;
+  }
+
+  #uvx-watermark-container::before {
+    height: 6%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #uvx-watermark-container {
+    padding: 0.75rem;
+  }
+
+  #uvx-watermark-container img {
+    height: 0.75rem;
+  }
+
+  #uvx-watermark-container::before {
+    height: 5%;
+  }
 }
