--- a/src/css/GameplayUI.css
+++ b/src/css/GameplayUI.css
@@ -14,5 +14,40 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  border: 2px solid red;
+  /* border: 2px solid red; */
+}
+
+.gameplay-ui-score-container {
+  position: absolute;
+  width: 20%;
+  height: 15%;
+  left: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.player-score {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: var(--font-medium);
+  font-family: var(--font-primary);
+  font-weight: 800;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 1em var(--uvx-primary), 0 0 0.2em var(--uvx-primary);
+  border-radius: 0 0 1rem 1rem;
+}
+
+.streaking-score {
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(45deg, rgba(253, 133, 255, 0.5) 0%, rgba(112, 133, 255, 0.5) 44%, rgba(253, 133, 255, 0.5) 100%);
+  text-shadow: 1px 1px 2px black, 0 0 1em var(--uvx-accent-color), 0 0 0.2em var(--uvx-accent-color);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  border: 3px solid;
+  border-color: transparent var(--uvx-accent-color) rgba(255, 255, 255, 0.4) var(--uvx-accent-color);
 }
