--- a/src/css/GameplayUI.css
+++ b/src/css/GameplayUI.css
@@ -50,4 +50,12 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   border: 3px solid;
   border-color: transparent var(--uvx-accent-color) rgba(255, 255, 255, 0.4) var(--uvx-accent-color);
+  transition: all ease-in-out;
+  /* animation: pulse-color 2s infinite ease-in-out forwards; */
+}
+
+@keyframes pulse-color {
+  0% { background: linear-gradient(45deg, rgba(112, 133, 255, 0.5) 0%, rgba(253, 133, 255, 0.5) 44%, rgba(255, 255, 255, 0.1) 100%); }
+  50% { background: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 0%, rgba(112, 133, 255, 0.5) 44%, rgba(253, 133, 255, 0.5) 100%); }
+  100% { background: linear-gradient(45deg, rgba(253, 133, 255, 0.5) 0%, rgba(255, 255, 255, 0.1) 44%, rgba(112, 133, 255, 0.5) 100%); }
 }
