Streaking score border and bg animates

--- a/src/css/GameplayUI.css
+++ b/src/css/GameplayUI.css
@@ -45,12 +45,12 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(10px);
   background: linear-gradient(45deg, rgba(253, 133, 255, 0.5) 0%, rgba(112, 133, 255, 0.5) 44%, rgba(253, 133, 255, 0.5) 100%);
+  background-size: 400% 400%;
   text-shadow: 1px 1px 2px black, 0 0 1em var(--uvx-accent-color), 0 0 0.2em var(--uvx-accent-color);
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   border: 3px solid;
   border-color: transparent var(--uvx-accent-color) rgba(255, 255, 255, 0.4) var(--uvx-accent-color);
-  transition: all ease-in-out;
-  /* animation: pulse-color 2s infinite ease-in-out forwards; */
+  animation: pulse-color 5s ease infinite;
 }
 
 .angle-readout-container {
@@ -78,7 +78,19 @@
 }
 
 @keyframes pulse-color {
-  0% { background: linear-gradient(45deg, rgba(112, 133, 255, 0.5) 0%, rgba(253, 133, 255, 0.5) 44%, rgba(255, 255, 255, 0.1) 100%); }
-  50% { background: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 0%, rgba(112, 133, 255, 0.5) 44%, rgba(253, 133, 255, 0.5) 100%); }
-  100% { background: linear-gradient(45deg, rgba(253, 133, 255, 0.5) 0%, rgba(255, 255, 255, 0.1) 44%, rgba(112, 133, 255, 0.5) 100%); }
+	0% {
+		background-position: 0% 50%;
+    border-color: transparent var(--uvx-accent-color) rgba(255, 255, 255, 0.4) var(--uvx-accent-color);
+	}
+	33% {
+    border-color: var(--uvx-accent-color) transparent var(--uvx-accent-color) rgba(255, 255, 255, 0.4);
+	}
+  66% {
+    background-position: 100% 50%;
+    border-color: rgba(255, 255, 255, 0.4) var(--uvx-accent-color) transparent var(--uvx-accent-color);
+  }
+	100% {
+		background-position: 0% 50%;
+    border-color: transparent rgba(255, 255, 255, 0.4) var(--uvx-accent-color) transparent;
+	}
 }
