--- a/src/css/GameInstructions.css
+++ b/src/css/GameInstructions.css
@@ -12,9 +12,15 @@
 }
 
 .back-dashboard-link {
+  font-family: var(--font-primary);
+  font-weight: var(--fw-medium);
   position: absolute;
   color: var(--uvx-primary);
   margin: 2% 3%;
+}
+
+.back-dashboard-link:hover {
+  color: var(--uvx-tertiary);
 }
 
 .how-to-play-container {
@@ -24,18 +30,6 @@
   justify-content: space-around;
   width: 100%;
   height: 100%;
-}
-
-.h2play-title {
-  padding: 2%;
-}
-
-.h2play-title h2 {
-  font-size: var(--font-medium);
-}
-
-.h2play-title h3 {
-  font-size: var(--font-small);
 }
 
 .card-carousel {
