--- a/src/css/RoomCode.css
+++ b/src/css/RoomCode.css
@@ -1,8 +1,12 @@
 #room-code-screen {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   z-index: 4;
 }
 
@@ -12,190 +16,72 @@
   height: 78%;
   bottom: 0;
   background-color: var(--uvx-secondary);
+  z-index: -1;
 }
 
 #light-blue-input-box {
   width: 40%;
   height: 65%;
   background-color: var(--uvx-primary);
-  border-radius: 40px;
+  border-radius: 2rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 3rem;
-  z-index: 6;
+  justify-content: space-around;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.room-code-content {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  padding-top: 3rem;
-  z-index: 6;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.room-code-content {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
 }
 
 .input-box-title {
-  display: flex;
   font-family: var(--font-primary);
   font-size: 3rem;
   color: white;
   background-color: var(--uvx-secondary);
   padding: 4% 5%;
-  border-radius: 20px;
-  width: fit-content;
-  text-align: center;
+  border-radius: 1rem 1rem;
 }
 
 .subtitle {
   font-family: var(--font-primary);
-  font-size: 2rem;
+  font-size: var(--font-small);
   color: white;
-  text-align: center;
-  width: fit-content;
-}
-
-.enter-button {
-  width: 10%;
-  padding: 1rem;
-  border-radius: 40px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  z-index: 7;
-  background-color: #f9cc35;
-}
-
-.enter-button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
 }
 
 .custom-code-input {
   display: flex !important;
-  justify-content: center !important;
-  height: 100%;
+  gap: 1rem;
+  justify-content: center;
+  height: 50%;
   width: 100%;
 }
 
 .custom-code-input input {
   width: 15%;
-  height: 50%;
-  font-size: 4rem;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-}
-
-.input-box-title {
-  display: flex;
-  font-family: var(--font-primary);
-  font-size: 3rem;
-  color: white;
-  background-color: var(--uvx-secondary);
-  padding: 4% 5%;
-  border-radius: 20px;
-  width: fit-content;
-  text-align: center;
-}
-
-.subtitle {
-  font-family: var(--font-primary);
-  font-size: 2rem;
-  color: white;
-  text-align: center;
-  width: fit-content;
-}
-
-.enter-button {
-  width: 10%;
-  padding: 1rem;
-  border-radius: 40px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  z-index: 7;
-  background-color: #f9cc35;
-}
-
-.enter-button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
-
-.custom-code-input {
-  display: flex !important;
-  justify-content: center !important;
-  height: 100%;
-  width: 100%;
-}
-
-.custom-code-input input {
-  width: 15%;
-  height: 50%;
+  height: 45%;
   font-size: 4rem;
   font-family: var(--font-primary);
   text-align: center;
   border-radius: 20px;
-  border: 2px solid #e0e0e0;
-  background-color: #98a7ff;
   color: var(--uvx-secondary);
-  margin: 0 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: var(--border-radius);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.27) 44%, rgba(255, 255, 255, 0) 100%);
+  border: 3px solid;
+  border-color: transparent rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.4) rgba(255, 255, 255, 0.3);
 }
 
 .custom-code-input input:focus {
-  border-color: #f9cc35;
+  border-color: var(--uvx-accent-color);
   outline: none;
 }
 
 .room-code-footer {
   display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-top: 5%;
-}
-
-.logo-container {
-  text-align: center;
-  border-radius: 20px;
-  border: 2px solid #e0e0e0;
-  background-color: #98a7ff;
-  color: var(--uvx-secondary);
-  margin: 0 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.custom-code-input input:focus {
-  border-color: #f9cc35;
-  outline: none;
-}
-
-.room-code-footer {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-top: 5%;
-}
-
-.logo-container {
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  justify-content: right;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
-  margin-right: 7%;
-  margin-top: 2%;
-  margin-right: 7%;
-  margin-top: 2%;
+}
+
+.placeholder {
+  visibility: hidden;
 }
