--- a/src/css/GameSetupScreen.css
+++ b/src/css/GameSetupScreen.css
@@ -21,43 +21,6 @@
   z-index: 2;
 }
 
-.perspective-walls{
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 78%;
-  perspective: 2000px; /*this value controls the depth effect */
-}
-
-.perspective-wall-left,
-.perspective-wall-right {
-  width: 22%;
-  height: 70%;
-  background: var(--uvx-l-gradient);
-  mask-image: linear-gradient(rgba(0, 0, 0, 1) 96%, transparent 100%);
-}
-
-.perspective-wall-left {
-  transform: translateY(-10%) translateX(0%) rotateY(25deg) skewY(-17deg);
-}
-
-.perspective-wall-center {
-  width: 56%;
-  height: calc(100% - 30% - 15.75%);
-  overflow: hidden;
-  background: var(--uvx-primary);
-  mask-image: linear-gradient(rgba(0, 0, 0, 1) 95%, transparent 100%);
-}
-
-.perspective-wall-center video {
-  mix-blend-mode: lighten;
-  width: 100%;
-}
-
-.perspective-wall-right {
-  transform: translateY(-10%) translateX(0%) rotateY(-25deg) skewY(17deg);
-}
-
 .game-setup-content-container {
   position: absolute;
   display: flex;
@@ -69,7 +32,6 @@
 
 .selection-container {
   width: 45%;
-  /* height: 100%; */
   padding: 1% 2%;
   display: flex;
   flex-direction: column;
@@ -83,6 +45,10 @@
   gap: 1rem;
   width: 100%;
   margin-block: 1.5rem;
+}
+
+.selection-items-container:has(form) {
+  justify-content: center;
 }
 
 .selection-item-environment,
