Adjusted calibration screen colors

--- a/src/css/SlidingInfo.css
+++ b/src/css/SlidingInfo.css
@@ -17,13 +17,16 @@
   /* mocap screen is 450px in desktop and Tablet */
   min-width: calc(4% + 450px);
   height: 100%;
+  z-index: 2;
 }
 
 .si-video-hue {
   position: absolute;
   width: 40%;
   height: 100%;
-  background: linear-gradient(to right, var(--uvx-primary), transparent);
+  mix-blend-mode: inherit;
+  z-index: 1;
+  background: linear-gradient(to right, var(--uvx-primary) 60%, transparent);
 }
 
 .sliding-info-video {
@@ -31,7 +34,6 @@
   min-width: 100%;
   min-height: 100%;
   left: -5%;
-  mix-blend-mode: luminosity;
 }
 
 .sliding-info-content {
@@ -49,6 +51,11 @@
 .sliding-title-override > h2 {
   font-size: var(--font-medium) !important;
   margin-bottom: 3%;
+  text-shadow: 2px 2px var(--uvx-secondary);
+}
+
+.sliding-title-override > h3 {
+  text-shadow: 2px 2px var(--uvx-secondary);
 }
 
 .sliding-info-instructions {
