--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -1,324 +1,43 @@
-#overlay-screen {
+#results-screen {
+  display: flex;
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  z-index: 999;
+  height: 100vh;
+  width: 100%;
+  color: var(--uvx-primary);
   font-family: var(--font-primary);
+  align-items: center;
+  justify-content: space-evenly;
+  pointer-events: all;
+  z-index: 4;
+  padding: 5%;
+  transition: all 5s ease-in-out;
+  backdrop-filter: blur(50px);
+  backdrop-filter: grayscale(100%);
 }
 
-.back-box {
+.blend-hue {
   position: absolute;
-  top: 25%;
   left: 0;
-  width: 100%;
-  height: 75%;
-  background-color: var(--uvx-secondary);
-}
-
-.middle-section {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  width: 100%;
+  top: 0;
   height: 100%;
-  z-index: 1000;
-}
-
-.left-box,
-.right-box,
-.center-box {
-  margin-bottom: 1%;
-}
-
-.left-box,
-.right-box {
-  width: 26%;
-  height: 65%;
-}
-
-.left-box {
-  width: 26%;
-  height: 65%;
-  background-color: var(--uvx-secondary);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-.achievements {
   width: 100%;
+  z-index: 4;
+  background-color: black;
+  background-blend-mode: hue;
+  opacity: 0.8;
+  transition: all 1s ease-in-out;
 }
 
-.achievements-title {
-  font-size: 1.5rem;
-  color: white;
-  margin-bottom: 20px;
+/* All of the boxes can share a class */
+.results-ui-box {
+  background-color: hsla(0, 0%, 0%, 0.6);
+  border-radius: var(--border-radius);
+  padding: 2%;
+  z-index: 4;
 }
 
-.achievement {
-  display: flex;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 15px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.achievement.completed {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.achievement-icon {
-  width: 30px;
-  height: 30px;
-  margin-right: 15px;
-}
-
-.achievement-info {
-  display: flex;
-  flex-direction: column;
-}
-
-.achievement-title {
-  font-size: 1.2rem;
-  color: white;
-}
-
-.achievement-description {
-  font-size: 0.9rem;
-  color: lightgray;
-}
-
-.achievement:not(.completed) {
-  opacity: 0.5;
-}
-
-.center-box {
-  width: 45%;
-  height: 85%;
-  background-color: var(--uvx-primary);
-  border-radius: 5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0;
-}
-
-.center-box-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  margin-bottom: 2%;
-  position: relative;
-  height: 20%;
-}
-
-.person-silhouette {
-  max-width: 100%;
-  max-height: 80%;
-  object-fit: contain;
-}
-
-.header-medal {
-  width: 25%;
-  height: auto;
-  object-fit: contain;
-  top: 20%;
-  left: 4%;
-  background-color: var(--uvx-secondary);
-  border-radius: 30px;
-  margin-top: 15%;
-}
-
-.header-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-  width: 30%;
-  color: white;
-  text-align: center;
-  background-color: var(--uvx-secondary);
-  border-radius: 30px;
-  padding: 2% 5%;
-}
-
-.header-score {
-  font-size: 2.25rem;
-  font-weight: 600;
-  color: white;
-  text-align: right;
-  width: 25%;
-}
-
-.header-score span {
-  font-weight: bold;
-}
-
-.data-point {
-  position: absolute;
-  width: 120px;
-  padding: 10px;
-  border-radius: 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.data-title {
-  display: flex;
-  min-width: max-content;
-  align-items: center;
-  text-align: center;
-  font-size: 1.35rem;
-  color: white;
-  margin-bottom: 10px;
-}
-
-.data-title img {
-  width: 18px;
-  height: 18px;
-  margin-right: 8px;
-}
-
-.data-value {
-  font-size: 1.75rem;
-  color: var(--uvx-results-foreground);
-  padding: 20px 60px;
-  border-radius: 8px;
-}
-
-.left-shoulder {
-  top: 35%;
-  left: 35%;
-}
-
-.right-shoulder {
-  top: 35%;
-  right: 35%;
-}
-
-.left-wrist {
-  top: 65%;
-  left: 32%;
-}
-
-.right-wrist {
-  top: 65%;
-  right: 32%;
-}
-
-.footer-box {
-  display: flex;
-  width: 100%;
-  height: 10vh;
-  background-color: var(--uvx-secondary);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10%;
-  padding-bottom: 1%;
-  z-index: 1000;
-}
-
-.footer-button {
-  background-color: #fff;
-  color: #333;
-  padding: 1rem 2rem;
-  border: none;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.footer-logo {
-  height: 60px;
-  margin: 0 auto;
-}
-
-/* 1024 */
-@media (max-width: 1024px) {
-  .left-box,
-  .right-box {
-    width: 28%;
-    height: 60%;
-  }
-
-  .center-box {
-    width: 40%;
-    height: 80%;
-  }
-
-  .footer-button {
-    font-size: 0.75rem;
-    padding: 0.8rem 1.5rem;
-  }
-}
-
-/* 768 */
-@media (max-width: 768px) {
-  .left-box,
-  .right-box {
-    width: 30%;
-    height: 55%;
-  }
-
-  .center-box {
-    width: 35%;
-    height: 75%;
-  }
-
-  .footer-box {
-    padding: 0 5%;
-  }
-
-  .footer-button {
-    font-size: 0.85rem;
-    padding: 0.7rem 1.2rem;
-  }
-
-  .footer-logo {
-    height: 50px;
-  }
-}
-
-.chart-container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  column-gap: 2rem;
-  width: auto;
-  height: 512px;
-  margin: 2rem 1rem;
-  overflow: hidden;
-  transition: all 0.5s;
-}
-.bar {
-  width: 50px;
-  background-color: var(--uvx-primary);
-  text-align: center;
-  color: white;
-  border-radius: 15px;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.ac-container {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 1rem;
-}
-
+/* LEFT SIDE */
 .achievement-container {
   display: flex;
   flex-direction: column;
@@ -340,6 +59,7 @@
   gap: 25px;
   color: white;
   font-size: 1.5rem;
+  margin-bottom: 25px;
 }
 
 #achievement-item input[type='checkbox'] {
@@ -359,4 +79,154 @@
 .achievement-description {
   color: rgb(214, 207, 207);
   font-size: 1rem;
+}
+
+/* RIGHT SIDE */
+.results-summary {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 70%;
+  gap: 1rem;
+}
+
+.results-summary::before {
+  content: 'Congratulations!';
+  position: absolute;
+  width: 30%;
+  z-index: 5;
+  margin-top: -3.5rem;
+  padding: 5px 10px;
+  font-size: 3rem;
+  font-weight: var(--fw-medium);
+  font-style: italic;
+  color: white;
+  background: linear-gradient(to right, #44f3b6, transparent);
+  border-radius: 1rem 0 0 1rem;
+  text-shadow: 3px 3px 6px black;
+}
+
+.badge-data {
+  display: flex;
+  align-items: center;
+}
+
+.medal-img {
+  width: 200px;
+  height: 200px;
+  animation: growMedal 1s linear;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
+.stat-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  background-color: black;
+  border-radius: var(--border-radius);
+  padding: 2%;
+  border: 2px solid var(--uvx-accent-color);
+  margin-top: 10px;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.stat-desc {
+  color: white;
+  font-size: 20px;
+}
+
+.stat p {
+  margin: 0;
+  font-size: 2rem;
+}
+
+.results-graph-container {
+  display: flex;
+  max-height: 350px;
+  justify-content: center;
+  align-items: center;
+}
+
+.results-graph-container::before {
+  content: 'Recent Performance Trends';
+  position: absolute;
+  display: flex;
+  color: white;
+  align-self: flex-start;
+}
+
+/* End of CSS Queen - start of Tony */
+/* .gameplay-buttons {
+  position: absolute;
+  width: 55%;
+  z-index: 6;
+  top: 79%;
+} */
+
+/* .button {
+  position: absolute;
+  padding: 5px 10px;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.button.restart-button {
+  left: 15px;
+  padding: 5px 15px;
+}
+
+.button.next-game-button {
+  right: 15px;
+  padding: 5px 15px;
+}
+
+.restart-button {
+  background-color: #4caf50;
+  color: white;
+}
+
+.next-game-button {
+  background-color: #2196f3;
+  color: white;
+}
+
+.button:hover {
+  opacity: 0.8;
+} */
+
+/* End of Tony CSS - start of CSS Queen */
+
+/* css rework of buttons, moved to its own file */
+
+@keyframes growMedal {
+  0% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  #results-screen {
+    flex-direction: column-reverse;
+  }
 }
