--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -46,7 +46,9 @@
 }
 
 .left-box {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .achievements-title {
@@ -291,7 +293,8 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 1rem 1rem;
+  width: 330px;
 }
 
 .achievement-container {
